[package]
name = "frust"
version = "0.1.0"
authors = ["Peter Evers <pevers90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix = "0.10.0"
actix-web-actors = "3.0.0"
anyhow = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
env_logger = "0.8.3"
log = "0.4.14"