[package]
name = "frust"
version = "0.1.0"
authors = ["Peter Evers <pevers90@gmail.com>"]
edition = "2018"

[dependencies]
linux-embedded-hal = "0.2.2"
hd44780-driver = "0.3.0"
regex = "1.3.9"
mio = "0.6.22"
mio-extras = "2.0.6"
sysfs_gpio = { version = "0.5.4", features=["mio-evented"] }
pid_control = "0.7.2"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
notify = "4.0.15"